Connexion à l'API Successfull

--- a/SafiRepay/App.config
+++ b/SafiRepay/App.config
@@ -87,7 +87,7 @@
   <userSettings>
     <SafiRepay.Properties.Settings>
       <setting name="routeApi" serializeAs="String">
-        <value>127.0.0.1</value>
+        <value>http://192.168.200.169:8000/api/</value>
       </setting>
     </SafiRepay.Properties.Settings>
   </userSettings>
